# whispr

./: .clinerules  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  index.html  package.json  styles.css  vite.config.ts
.github/: dependabot.yml
.github/workflows/: dependabot.yml
src/: App.css  App.tsx  app.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  hotkey.rs  lib.rs  logging.rs  main.rs  menu.rs  setup.rs  whisper.rs  window.rs
